Responses added to Profile/Message endpoint
Profile and message endpoints are done and refactored with Response. Comment entpoint still to do.
